@@ -31,6 +31,7 @@ Version x.x.x (not yet released)
  * Check if a directory name conflicts with a filename.
  * When file is imported, omit the empty revision 1.1.
  * If a non-trunk default branch is excluded, graft its contents to trunk.
+ * Require --symbol-transform pattern to match entire symbol name.
 
  Miscellaneous:
  * Add a simple (nonportable) script to log cvs2svn memory usage.
